# Projects

./: LICENSE  README.md
C++/DynamicDispatchManually/: README.md  main.cpp
C++/Number to English Converter/: README.md
C++/Sensor Graph Display/: CMakeLists.txt  README.md  build_and_run.sh  clean_and_setup.py  run_app.py  sample_data.txt  sample_data2.csv  test_chart_data.json
C++/Sensor Graph Display/python/: chart_generator.py  chart_generator_fixed.py  run_with_venv.py
C++/Sensor Graph Display/resources/: resources.qrc
C++/Sensor Graph Display/src/: detachedgraphwindow.cpp  detachedgraphwindow.h  droparea.cpp  droparea.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  pythonchartbridge.cpp  pythonchartbridge.h  pythondetachedgraphwindow.cpp  pythondetachedgraphwindow.h  pythongraphwidget.cpp  pythongraphwidget.h  sensordataparser.cpp  sensordataparser.h
ComputeAverage/: pyvenv.cfg
ComputeAverage/SwiftPythonComputeAverage/SwiftPythonComputeAverage/: ContentView.swift  PythonScript.py  RunPythonScript.swift
ComputeAverage/SwiftPythonComputeAverage/SwiftPythonComputeAverage.xcodeproj/: project.pbxproj
Data/Text Data/Sensor Logs CSV/: sensor_log-2025-09-09.csv  sensor_log-2025-09-14.csv
Electronics/Arduino Mini Projects/: LICENSE
Electronics/Arduino Mini Projects/0 Electricity/: Iowa State University - Physics of Nondestructive Evaluation - Electricity.txt
Electronics/Arduino Mini Projects/1 Blinking LED/: Components required.txt
Electronics/Arduino Mini Projects/10 Button State Change Detection (Edge Detection)/: Components required.txt
Electronics/Arduino Mini Projects/11 LED Interval vs Delay/: Components required.txt
Electronics/Arduino Mini Projects/2 Brightness LED/: Components required.txt
Electronics/Arduino Mini Projects/20 RGB LED Red Green Blue Purple/: Components required.txt
Electronics/Arduino Mini Projects/21 LED Bar Graph 10 LED/: Components required.txt
Electronics/Arduino Mini Projects/22 LED 7 Segment Display/: Components required.txt
Electronics/Arduino Mini Projects/23 74HC595 Shift Register/: Components required.txt
Electronics/Arduino Mini Projects/24 LED 4 Digital 7 Segment Display/: Components required.txt
Electronics/Arduino Mini Projects/25 Electret Microphone CZN 15E/: Components required.txt
Electronics/Arduino Mini Projects/25.1 Sound Sensor KY-037/: Components required.txt
Electronics/Arduino Mini Projects/25.2 Sound Sensor KY-038/: Components required.txt
Electronics/Arduino Mini Projects/26 MAX7219 LED Matrix Module/: Components required.txt
Electronics/Arduino Mini Projects/27 Display I2C LCD1602 Module/: Components required.txt
Electronics/Arduino Mini Projects/28 Active Buzzer/: Components required.txt
Electronics/Arduino Mini Projects/29 Passive Buzzer/: Components required.txt
Electronics/Arduino Mini Projects/3 Button Serial Monitor/: Components required.txt
Electronics/Arduino Mini Projects/30 SG90 Micro Servo 9g/: Components required.txt
Electronics/Arduino Mini Projects/31 130 DC Motor and L293D Driver/: Components required.txt
Electronics/Arduino Mini Projects/32 28BY48 Stepper Motor ULN2003 Driver/: Components required.txt
Electronics/Arduino Mini Projects/34 Slide Switch 104 Capacitor/: Components required.txt
Electronics/Arduino Mini Projects/35 SW520D Ball Tilt Vibration Switch/: Components required.txt
Electronics/Arduino Mini Projects/35.1 KY-020 Tilt Switch/: Components required.txt
Electronics/Arduino Mini Projects/35.2 KY-017 Mercury Tilt Switch Module/: Components required.txt
Electronics/Arduino Mini Projects/35.3 KY-027 Magic Light Cup Module Mercury Tilt Switch/: Components required.txt
Electronics/Arduino Mini Projects/36 TTP223 Touch Switch/: Components required.txt
Electronics/Arduino Mini Projects/37 4x4 Matrix Kepad Module/: Components required.txt
Electronics/Arduino Mini Projects/38 HX-M121 IR Receiver/: Components required.txt
Electronics/Arduino Mini Projects/38.1 KY-022 Infrared Receiver 38kHz/: Components required.txt
Electronics/Arduino Mini Projects/39 5V Relay Module/: Components required.txt
Electronics/Arduino Mini Projects/4 Potentiometer/: Components required.txt
Electronics/Arduino Mini Projects/40 KY-023 Joystick Module/: Components required.txt
Electronics/Arduino Mini Projects/41 MPR121 Module Touch Sensor/: Components required.txt
Electronics/Arduino Mini Projects/42 HW-KY-040 Incremental Rotatry Encoder/: Components required.txt
Electronics/Arduino Mini Projects/43 Photoresistor CdS Photoconductive Cells/: Components required.txt
Electronics/Arduino Mini Projects/44 NTC Thermistor/: Components required.txt
Electronics/Arduino Mini Projects/45 Water Level Detection Sensor/: Components required.txt
Kotlin/MadeUpProgrammingLanguage/: README.md
Python/Breakout/: README.md  main.py  pyvenv.cfg
Racket/Space Invaders/: LICENSE  README.md  Space Invaders Domain Analysis.fig  SpaceInvaders.rkt
Swift and Python/Addition/: README.md  pyvenv.cfg
Swift and Python/ComputeAverage/: README.md
Swift/DoubleDispatchVsPatternMatching/: LICENSE  README.md
Swift/DynamicDispatchManually/: README.md
Swift/LearningOOP/: README.md  build-project.sh  cleanup-build-dirs.sh
Swift/MadeUpProgrammingLanguage/: README.md
(+517 files in other folders)
